<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Inventory</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Items</string>

    <string name="empty_view_title_text">Press the PLUS button and add the corresponding values to fill in the list</string>

    <string name="empty_view_subtitle_text">Get started by adding a pet</string>

    <string name="editor_activity_title_new_item">Add an Item</string>

    <string name="editor_activity_title_edit_item">Edit Item</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="action_edit">Edit</string>

    <string name="editor_insert_item_successful">Item saved</string>

    <string name="editor_insert_item_failed">Error with saving item</string>

    <string name="editor_update_item_successful">Item updated</string>

    <string name="editor_update_item_failed">Error with updating item</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_item_successful">Item deleted</string>

    <string name="editor_delete_item_failed">Error with deleting item</string>

    <string name="delete_dialog_msg">Delete this item?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="category_overview">Product Details</string>

    <string name="category_gender">Supplier details</string>

    <string name="category_measurement">Measurement</string>

    <string name="hint_item_name">Name</string>

    <string name="hint_item_price">Price in €</string>

    <string name="hint_item_quantity">Quantity</string>

    <string name="unit_item_price">€</string>

    <string name="hint_item_supplier_name">Name</string>

    <string name="hint_item_supplier_email">Email</string>

    <string name="hint_item_supplier_phone">Phone</string>

    <string name="unknown_price">Unknown price</string>

    <string name="sale_button">SALE</string>

    <string name="reduce_stock">-</string>

    <string name="increase_stock">+</string>

    <string name="stock">Edit Stock:</string>

    <string name="price">€</string>

    <string name="instock">In stock:</string>

    <string name="phone_supplier">phone supplier</string>

    <string name="data_incomplete">Data is still missing</string>

    <string name="item_details">Product details</string>



</resources>
